feat: Implement navigation bar for both desktop and mobile devices

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,9 @@
 {
-    "translation": {}
+    "translation": {
+        "navbar": {
+            "skills": "Skills",
+            "projects": "Projects",
+            "contact": "Contact"
+        }
+    }
 }
