--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,3 +1,9 @@
 {
-    "translation": {}
+    "translation": {
+        "navbar": {
+            "skills": "Compétences",
+            "projects": "Projets",
+            "contact": "Contact"
+        }
+    }
 }
