feat: Add translation for "Live Preview" and "View Code" for projects

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,6 +12,10 @@
         },
         "projects": {
             "title": "Personal projects",
+            "button": {
+                "livePreview": "Live preview",
+                "viewCode": "View code"
+            },
             "project": {}
         },
         "skills": {
